Router ID instead of name

--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -63,7 +63,7 @@ UNIT_TABLE = {
     "metadata" : { "size" : "normal" },
 
     "lan_net_pool" : "10.64",
-    "lan_router" : "router-lan",
+    "lan_router" : "b542ac30-920e-474d-8378-2749aaa5ec92",
     "nameservers" : [ "192.84.143.16", "192.84.143.224", "192.84.143.31" ]
   },
   'unipd' : {
@@ -85,7 +85,7 @@ UNIT_TABLE = {
     "metadata" : { "size" : "normal" },
 
     "lan_net_pool" : "10.67",
-    "lan_router" : "Unipd",
+    "lan_router" : "a471b8a1-2092-4c3c-9645-6d128e429fa4",
     "nameservers" : [ "147.162.1.2", "8.8.8.8", "8.8.4.4" ]
   },
   'unipddfa' : {
@@ -107,7 +107,7 @@ UNIT_TABLE = {
     "metadata" : { "size" : "normal" },
 
     "lan_net_pool" : "10.64",
-    "lan_router" : "router-lan",
+    "lan_router" : "b542ac30-920e-474d-8378-2749aaa5ec92",
     "nameservers" : [ "192.84.143.16", "192.84.143.224", "192.84.143.31" ]
   },
   'cloudveneto' : {
@@ -129,7 +129,7 @@ UNIT_TABLE = {
     "metadata" : { "size" : "normal" },
 
     "lan_net_pool" : "10.68",
-    "lan_router" : "CloudVeneto",
+    "lan_router" : "f51fa4d0-caea-4579-b694-8a227860077f",
     "nameservers" : [ "147.162.1.2", "8.8.8.8", "8.8.4.4" ]
   }
 }
