--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -28,6 +28,9 @@ MANAGERS = (
 
 HORIZON_CONFIG['help_url'] = 'http://userguide.cloudveneto.it/'
 
+HORIZON_CONFIG['identity_providers']['infn_sso']['path'] = 'https://<%=@site_fqdn-%>/dashboard-infn/auth/register/'
+HORIZON_CONFIG['identity_providers']['unipd_sso']['path'] = 'https://<%=@cv_site_fqdn-%>/dashboard-unipd/auth/register/'
+
 HORIZON_CONFIG['srv_bind_table'] = {
   "<%=@site_fqdn-%>" : "<%=@keystone_cap_fqdn-%>",
   "<%=@cv_site_fqdn-%>" : "<%=@keystone_cv_fqdn-%>"
