New OpenID Connect configuration

--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -36,6 +36,42 @@ HORIZON_CONFIG['srv_bind_table'] = {
   "<%=@cv_site_fqdn-%>" : "<%=@keystone_cv_fqdn-%>"
 }
 
+<% if @enable_oidc -%>
+OIDC_REDIRECT_PATH = '/dashboard-oidc/redirect'
+
+<% @oidc_providers.each do | prov_id, prov_data | -%>
+HORIZON_CONFIG['identity_providers']['<%=prov_id-%>_sso'] = {
+    'context' :     '/dashboard-<%=prov_id-%>',
+    'path' :        '/dashboard-<%=prov_id-%>/auth/register/',
+    'description' : '<%=prov_data["descr"]-%>',
+    'logo' :        '/dashboard/static/dashboard/img/logoINDIGO.png',
+    'uid_tag' :     'OIDC-preferred_username',
+    'org_tag' :     'OIDC-organisation_name'
+}
+
+WEBSSO_IDP_MAPPING["<%=prov_id-%>_sso"] = ("<%=prov_id-%>aai", "openid")
+WEBSSO_IDP_ENTITIES["<%=prov_id-%>aai"] = [ "<%=prov_data["iss"]-%>" ]
+WEBSSO_IDP_RULES["<%=prov_id-%>_sso"] = [
+    {
+        "local": [
+            {
+                "user": {
+                    "name": "{0}",
+                    "domain": { "id": "default" },
+                    "type": "local"
+                }
+
+            }
+        ],
+        "remote": [ { "type": "OIDC-preferred_username" } ]
+    }
+]
+
+WEBSSO_CHOICES = WEBSSO_CHOICES + (('<%=prov_id-%>_sso', '<%=prov_data["descr"]-%>'), )
+
+<% end -%>
+<% end -%>
+
 <% unless @shib_testing_md -%>
 
 UNIT_TABLE = {
