--- a/controller_rocky/templates/ssl.conf.erb
+++ b/controller_rocky/templates/ssl.conf.erb
@@ -80,31 +80,38 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
 <% if @enable_oidc -%>
     OIDCRedirectURI https://<%=@keystone_cap_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect
     OIDCMetadataDir <%=@oidc_md_dir-%>/<%=@keystone_cap_fqdn%>
-    #OIDCOAuthIntrospectionEndpoint TODO
+<% if @oidc_intro_ep != "" -%>
+    OIDCOAuthIntrospectionEndpoint <%=@oidc_intro_ep%>
+<% end -%>
 
-<% @oidc_providers.each do | prov_id, prov_data | -%>
+<% @oidc_providers.each do | prov_id, prov_data |
+     enc_iss = encode_iss(prov_data["iss"])["url"] -%>
+
     <Location "/v3/auth/OS-FEDERATION/identity_providers/<%=prov_id-%>/protocols/openid/websso">
       AuthType openid-connect
-      OIDCDiscoverURL https://<%=@keystone_cap_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect?iss=<%=prov_data["enc_iss"]%>
+      OIDCDiscoverURL https://<%=@keystone_cap_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect?iss=<%=enc_iss%>
       Require claim iss:<%=prov_data["iss"]%>
       LogLevel warn
     </Location>
 
+<% if @oidc_intro_ep != "" -%>
     <Location ~ "/v3/OS-FEDERATION/identity_providers/<%=prov_id-%>/protocols/openid/auth">
         Authtype oauth20
         Require  claim iss:<%=prov_data["iss"]%>
         LogLevel warn
     </Location>
-
 <% end -%>
+
+<% end -%><%# end of @oidc_providers.each %>
+
     <Location ~ "/v3/auth/OS-FEDERATION/websso/openid">
       AuthType  openid-connect
       Require   valid-user
       LogLevel warn
     </Location>
-<% end -%>
 
-<% end -%>
+<% end -%><%# end of @enable_oidc %>
+<% end -%><%# end of @enable_aai_ext %>
 </VirtualHost>
 
 #######################################################################################################################
@@ -177,17 +184,19 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
     OIDCRedirectURI https://<%=@site_fqdn%>:443/dashboard-oidc/redirect
     OIDCMetadataDir <%=@oidc_md_dir-%>/<%=@site_fqdn%>
 
-<% @oidc_providers.each do | prov_id, prov_data | -%>
+<% @oidc_providers.each do | prov_id, prov_data | 
+     enc_iss = encode_iss(prov_data["iss"])["url"]
+     if prov_data.fetch("local_user", false) -%>
     WSGIScriptAlias /dashboard-<%=prov_id-%> "/usr/share/openstack-dashboard/openstack_dashboard/wsgi/django.wsgi"
 
     <Location /dashboard-<%=prov_id-%>>
         AuthType openid-connect
         Require  claim iss:<%=prov_data["iss"]%>
-        OIDCDiscoverURL https://<%=@site_fqdn%>:443/dashboard-oidc/redirect?iss=<%=prov_data["enc_iss"]%>
+        OIDCDiscoverURL https://<%=@site_fqdn%>:443/dashboard-oidc/redirect?iss=<%=enc_iss%>
         LogLevel warn
     </Location>
-
-<% end -%>
+<%   end
+   end -%>
     <Location /dashboard-oidc>
         AuthType  openid-connect
         Require   valid-user
@@ -266,31 +275,38 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
 <% if @enable_oidc -%>
     OIDCRedirectURI https://<%=@keystone_cv_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect
     OIDCMetadataDir <%=@oidc_md_dir-%>/<%=@keystone_cv_fqdn%>
-    #OIDCOAuthIntrospectionEndpoint TODO
+<% if @oidc_intro_ep != "" -%>
+    OIDCOAuthIntrospectionEndpoint <%=@oidc_intro_ep%>
+<% end -%>
 
-<% @oidc_providers.each do | prov_id, prov_data | -%>
+<% @oidc_providers.each do | prov_id, prov_data |
+     enc_iss = encode_iss(prov_data["iss"])["url"] -%>
     <Location "/v3/auth/OS-FEDERATION/identity_providers/<%=prov_id-%>/protocols/openid/websso">
       AuthType openid-connect
-      OIDCDiscoverURL https://<%=@keystone_cv_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect?iss=<%=prov_data["enc_iss"]%>
+      OIDCDiscoverURL https://<%=@keystone_cv_fqdn -%>:443/v3/auth/OS-FEDERATION/websso/openid/redirect?iss=<%=enc_iss%>
       Require claim iss:<%=prov_data["iss"]%>
       LogLevel warn
     </Location>
 
+<% if @oidc_intro_ep != "" -%>
     <Location ~ "/v3/OS-FEDERATION/identity_providers/<%=prov_id-%>/protocols/openid/auth">
-        Authtype oauth20
-        Require  claim iss:<%=prov_data["iss"]%>
-        LogLevel warn
+      Authtype oauth20
+      Require  claim iss:<%=prov_data["iss"]%>
+      LogLevel warn
     </Location>
-
 <% end -%>
+
+<% end -%><%# end of @oidc_providers.each %>
+
     <Location ~ "/v3/auth/OS-FEDERATION/websso/openid">
       AuthType  openid-connect
       Require   valid-user
       LogLevel warn
     </Location>
-<% end -%>
 
-<% end -%>
+<% end -%><%# end of @enable_oidc %>
+
+<% end -%><%# end of @enable_aai_ext %>
 </VirtualHost>
 
 #######################################################################################################################
@@ -364,17 +380,19 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
     OIDCRedirectURI https://<%=@cv_site_fqdn%>:443/dashboard-oidc/redirect
     OIDCMetadataDir <%=@oidc_md_dir-%>/<%=@cv_site_fqdn%>
 
-<% @oidc_providers.each do | prov_id, prov_data | -%>
+<% @oidc_providers.each do | prov_id, prov_data |
+     enc_iss = encode_iss(prov_data["iss"])["url"]
+     if prov_data.fetch("local_user", false) -%>
     WSGIScriptAlias /dashboard-<%=prov_id-%> "/usr/share/openstack-dashboard/openstack_dashboard/wsgi/django.wsgi"
 
     <Location /dashboard-<%=prov_id-%>>
         AuthType openid-connect
         Require  claim iss:<%=prov_data["iss"]%>
-        OIDCDiscoverURL https://<%=@cv_site_fqdn%>:443/dashboard-oidc/redirect?iss=<%=prov_data["enc_iss"]%>
+        OIDCDiscoverURL https://<%=@cv_site_fqdn%>:443/dashboard-oidc/redirect?iss=<%=enc_iss%>
         LogLevel warn
     </Location>
-
-<% end -%>
+<%   end
+   end -%>
     <Location /dashboard-oidc>
         AuthType  openid-connect
         Require   valid-user
