--- a/controller_rocky/templates/local_settings.erb
+++ b/controller_rocky/templates/local_settings.erb
@@ -128,7 +128,7 @@ LOCAL_PATH = '/tmp'
 # (usually behind a load-balancer). Either you have to make sure that a session
 # gets all requests routed to the same dashboard instance or you set the same
 # SECRET_KEY for all of them.
-SECRET_KEY = '<%=horizon_secret_key-%>'
+SECRET_KEY = '<%=@horizon_secret_key-%>'
 
 # We recommend you use memcached for development; otherwise after every reload
 # of the django development server, you will have to login again. To use
