--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -76,6 +76,7 @@ UNIT_TABLE = {
     "organization" : 'infn.it',
     "quota_total" :  200,
     "quota_ceph" : 200,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 0,
     "quota_per_volume" : 5000,
@@ -108,6 +109,7 @@ UNIT_TABLE = {
     "organization" : 'unipd.it',
     "quota_total" :  200,
     "quota_ceph" : 0,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 200,
     "quota_per_volume" : 5000,
@@ -130,6 +132,7 @@ UNIT_TABLE = {
     "organization" : 'unipd.it',
     "quota_total" :  200,
     "quota_ceph" : 0,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 200,
     "quota_per_volume" : 5000,
@@ -152,6 +155,7 @@ UNIT_TABLE = {
     "organization" : 'cloudveneto.it',
     "quota_total" :  200,
     "quota_ceph" : 0,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 200,
     "quota_per_volume" : 5000,
@@ -179,6 +183,7 @@ UNIT_TABLE = {
     "organization" : 'infn.it',
     "quota_total" :  200,
     "quota_ceph" : 200,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 0,
     "quota_per_volume" : 5000,
@@ -199,6 +204,7 @@ UNIT_TABLE = {
     "organization" : 'cloudveneto.it',
     "quota_total" :  200,
     "quota_ceph" : 0,
+    "quota_ceph-ec" : 0,
     "quota_iscsi-infnpd" : 0,
     "quota_equallogic-unipd" : 200,
     "quota_per_volume" : 5000,
