--- a/compute_rocky/templates/collectd.conf.erb
+++ b/compute_rocky/templates/collectd.conf.erb
@@ -4,10 +4,17 @@ BaseDir     "/var/lib/collectd"
 PIDFile     "/var/run/collectd.pid"
 PluginDir   "/usr/lib64/collectd"
 TypesDB     "/usr/share/collectd/types.db"
+Interval    600
 
 
 LoadPlugin network
 LoadPlugin virt
+LoadPlugin syslog
+
+<Plugin syslog>
+       LogLevel info
+</Plugin>
+
 
 <Plugin network>
 Server "<%=@influxdb_collectd_host-%>" "<%=@influxdb_collectd_port-%>"
@@ -16,11 +23,10 @@ Server "<%=@influxdb_collectd_host-%>" "<%=@influxdb_collectd_port-%>"
 
 <Plugin virt>
         Connection "qemu:///system"
-        RefreshInterval 300
-        HostnameFormat uuid
+        HostnameFormat hostname
         PluginInstanceFormat uuid
         Instances 1
-        ExtraStats "cpu_util job_stats_background pcpu perf vcpupin"
+        ExtraStats "cpu_util"
 </Plugin>
 
-Include "/etc/collectd.d"
+#Include "/etc/collectd.d"
