Non collezionare info su rete e block device

--- a/compute_rocky/templates/collectd.conf.erb
+++ b/compute_rocky/templates/collectd.conf.erb
@@ -27,6 +27,10 @@ Server "<%=@influxdb_collectd_host-%>" "<%=@influxdb_collectd_port-%>"
         PluginInstanceFormat uuid
         Instances 1
         ExtraStats "cpu_util"
+        # Don't collect metrics regarding block devices and network interfaces
+        BlockDevice "/:/"
+	InterfaceDevice "/:/"
+        IgnoreSelected true
 </Plugin>
 
 #Include "/etc/collectd.d"
