Defined user and role for accounting

--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -180,6 +180,11 @@ HORIZON_CONFIG['course_for'] = {
     'studenti.unipd.it' : 'unipd_sso'
 }
 
+ACCOUNTING = {
+    'user_id' : '5bff3b73dd20464f8ce3836f82ef29c0',
+    'role_id' : 'fa30a6d129384225ad2b25e28af2c149'
+}
+
 <% else -%>
 
 UNIT_TABLE = {
